New version of classification example

--- a/deeplearningbasics/learning_imageclassification.ipynb
+++ b/deeplearningbasics/learning_imageclassification.ipynb
@@ -8,7 +8,7 @@
       "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1wfbZLQIoRMp28FBWyoLm",
+      "authorship_tag": "ABX9TyNGIugRo88HZq/GEnMxaI14",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,26 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/robotics-upo/rva-course-material/blob/master/deeplearningbasics/learning_imageclassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jqsP6F6cYuxK",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Introduction"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bJjGdFqaYtjT",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this session we will learn to create and train a simple network for image classification"
       ]
     },
     {
