--- a/deeplearningbasics/learning_imageclassification.ipynb
+++ b/deeplearningbasics/learning_imageclassification.ipynb
@@ -8,7 +8,7 @@
       "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGIugRo88HZq/GEnMxaI14",
+      "authorship_tag": "ABX9TyNa56/LG2Ch9MrMeks5sF9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,19 @@
         "colab_type": "text"
       },
       "source": [
-        "In this session we will learn to create and train a simple network for image classification"
+        "In this session we will learn to create and train a simple network for image classification.\n",
+        "\n",
+        "We will be using TensorFlow and its Keras API. \n",
+        "\n",
+        "**TensorFlow**: https://www.tensorflow.org/\n",
+        "\n",
+        "**Keras** API: \n",
+        "\n",
+        "*   https://www.tensorflow.org/api_docs/python/tf/keras\n",
+        "*   https://keras.io/ \n",
+        "\n",
+        "\n",
+        "TensorFlow comes preinstalled in the Colab environment"
       ]
     },
     {
@@ -64,9 +76,17 @@
         "colab_type": "text"
       },
       "source": [
-        "With the next lines, we load the data we will use and show one example\n",
+        "For training, we will be using data from the **CIFAR dataset**\n",
         "\n",
-        "We can use OpenCV in Colab, but not the GUI functions"
+        "https://www.cs.toronto.edu/~kriz/cifar.html\n",
+        "\n",
+        "The Keras API allows to use this data in a very simple way. It has also functions for other datasets.\n",
+        "\n",
+        "https://keras.io/datasets/\n",
+        "\n",
+        "With the next lines, we load the data we will use and show one exemplar image from the dataset. We can use OpenCV in Colab, but not the GUI functions. So we will use the plotting facilities of **matplotlib**:\n",
+        "\n",
+        "https://matplotlib.org/"
       ]
     },
     {
@@ -83,6 +103,11 @@
         "#Load train dataset for CIFAR10\n",
         "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
         "\n",
+        "print(x_train.shape)\n",
+        "print(y_train.shape)\n",
+        "print(x_test.shape)\n",
+        "print(y_test.shape)\n",
+        "\n",
         "#Show one sample image\n",
         "#We can use OpenCV in Colab, but not its function imshow\n",
         "#We use matplotlib instead\n",
@@ -98,7 +123,9 @@
         "\n",
         "# Convert class vectors to binary class matrices.\n",
         "y_train = to_categorical(y_train, 10)\n",
-        "y_test = to_categorical(y_test, 10)\n"
+        "y_test = to_categorical(y_test, 10)\n",
+        "print(y_train.shape)\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -120,7 +147,10 @@
         "colab_type": "text"
       },
       "source": [
-        "The next lines create a simple CNN"
+        "The next lines create a simple network with several convolutional and maxpool layers, followed by fully connected layers, stacked in a sequential way for classification.\n",
+        "\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/Sequential\n",
+        "\n"
       ]
     },
     {
@@ -167,7 +197,12 @@
         "colab_type": "text"
       },
       "source": [
-        "The next lines"
+        "The next lines allow to train the model using the data from CIFAR-10 downloaded above.\n",
+        "\n",
+        "The important aspects are the loss function employed, and the optimizer\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -198,6 +233,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W1Y-oUXR6hKl",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's check the accuracy for the test set."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Nms5SjKCwZMd",
@@ -215,11 +260,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "5I02ywLH7Fcr",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can enhance the accuracy by adapting learning parameters (training the model longer, etc), adding more data (we are using already all images from CIFAR-10) and playing with the network architecture (complexity, layers, etc).\n",
+        "\n",
+        "You can check the current accuracy that it is achieved in this benchmark at:\n",
+        "\n",
+        "https://benchmarks.ai/cifar-10"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "xskPn3GgwESq",
         "colab_type": "text"
       },
       "source": [
         "# Inference"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bav7hkZiiX7d",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once our network is trained, it can be used to infer the category of an image"
       ]
     },
     {
