--- a/imageprocessingbasics/filtering.ipynb
+++ b/imageprocessingbasics/filtering.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN2284TaPBhgTM2hOHk3iE4",
+      "authorship_tag": "ABX9TyNJ0doBrKgPscEqLbawMP9v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,7 +312,13 @@
         "id": "QoAboPlutFnA"
       },
       "source": [
-        "# Shaperning\n"
+        "# Shaperning\n",
+        "\n",
+        "The convolution operation is a linear operation. \n",
+        "\n",
+        "Several kernels can be combined to obtain the desired effect.\n",
+        "\n",
+        "For instance, a sharpening effect can be obtained by combining a delta kernel (that leaves the image intact) and an average kernel:"
       ]
     },
     {
