Added additional homework

--- a/imageprocessingbasics/filtering.ipynb
+++ b/imageprocessingbasics/filtering.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJ0doBrKgPscEqLbawMP9v",
+      "authorship_tag": "ABX9TyNwhWqw5x7i09BJmwh3J/y6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,8 +86,7 @@
         "\n",
         "* 2D linear filters, convolutions: \n",
         "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html\n",
-        "\n",
-        "We will be using some simple kernels to extract borders in the image.\n"
+        "\n"
       ]
     },
     {
@@ -100,131 +99,7 @@
         "\n",
         "plt.figure()  \n",
         "plt.imshow(im)\n",
-        "\n",
-        "#Kernel for edge detection\n",
-        "filter_kernel = np.array([[-1,-2,-1],\n",
-        "\t\t\t\t[0,0,0],\n",
-        "\t\t\t\t[1,2,1]])\n",
-        "\n",
-        "print(filter_kernel)\n",
-        "\n",
-        "#Apply filter over the blue channel. -1 indicates that the pixel type in the output is the same\n",
-        "#as the input (in this case, uint8)\n",
-        "h_edges = cv2.filter2D(im[:,:,0],-1,filter_kernel)\n",
-        "\n",
-        "#Type of pixels\n",
-        "print(h_edges.dtype)\n",
-        "\n",
-        "plt.figure()  \n",
-        "plt.imshow(h_edges,cmap=plt.cm.gray)\n",
-        "plt.title('Filtered')\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M7VRdM_Qk7j3"
-      },
-      "source": [
-        "Now we have to be careful with the types of the images. Filtering operations will lead to outputs that typically are real numbers, while the pixels in the original image in this case are coded as `uint8`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kWbdY8rDlL_g"
-      },
-      "source": [
-        "#The problem with the former case is that, as the output is uint8, negative numbers\n",
-        "#are truncated to 0. That is edges from bright to dark do not appear\n",
-        "#Alternatively, we can store the output as floats\t\n",
-        "h_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,filter_kernel)\n",
-        "\n",
-        "#Type of pixels\n",
-        "print(h_edges_2.dtype)\n",
-        "\n",
-        "#Get now the absolute value\n",
-        "abs_h_edges64f = np.absolute(h_edges_2)\n",
-        "\n",
-        "#Check the difference\n",
-        "plt.figure()  \n",
-        "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
-        "plt.title('Filtered')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9W3Y0pGFl5u9"
-      },
-      "source": [
-        "The kernels are also numpy arrays.\n",
-        "\n",
-        "By transposing the former kernel, we obtain a filter that \"responds\" vertical edges"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iXIVQebalxJ0"
-      },
-      "source": [
-        "#Same as above\n",
-        "v_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,np.transpose(filter_kernel))\n",
-        "abs_v_edges64f = np.absolute(v_edges_2)\n",
-        "\n",
-        "plt.figure()  \n",
-        "plt.imshow(abs_v_edges64f,cmap=plt.cm.gray)\n",
-        "plt.title('Vertical edges kernel')\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fzXEQzw2uKLJ"
-      },
-      "source": [
-        "# Homework #1\n",
-        "\n",
-        "Play with the thresholds and add binary operations to obtain a clean binary edge image"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2_JEA1tLme1r"
-      },
-      "source": [
-        "#We can add the outputs to obtain an image\n",
-        "#with the response of both filters (in this case, the absolute value)\n",
-        "abs_edges_64f = abs_v_edges64f + abs_h_edges64f\n",
-        "\n",
-        "plt.figure()  \n",
-        "plt.imshow(abs_edges_64f,cmap=plt.cm.gray)\n",
-        "plt.title('Edge response')\n",
-        "\n",
-        "#Check the values of abs_edges_f64. They not need to be between 0 and 255\n",
-        "print('Maximum', np.max(abs_edges_64f))\n",
-        "print('Minimum', np.min(abs_edges_64f))\n",
-        "\n",
-        "\n",
-        "#We can apply the threshold operation to extract the stongest responses\n",
-        "ret,binary_edges = cv2.threshold(abs_edges_64f,100,255,cv2.THRESH_BINARY)\n",
-        "\n",
-        "plt.figure()  \n",
-        "plt.imshow(binary_edges,cmap=plt.cm.gray)\n",
-        "plt.title('Binarized edges ')\n",
-        "\n",
-        "print(binary_edges.dtype)\n",
-        "print('Maximum', np.max(binary_edges))\n",
-        "print('Minimum', np.min(binary_edges))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -265,6 +140,8 @@
         "\n",
         "#Normalize the kernel (so all element sum 1.0)\n",
         "gaussKernel /= np.sum(gaussKernel)\n",
+        "\n",
+        "print(gaussKernel)\n",
         "\n",
         "plt.figure()  \n",
         "plt.imshow(gaussKernel,cmap=plt.cm.gray)\n",
@@ -312,7 +189,7 @@
         "id": "QoAboPlutFnA"
       },
       "source": [
-        "# Shaperning\n",
+        "# Shaperning Filters\n",
         "\n",
         "The convolution operation is a linear operation. \n",
         "\n",
@@ -358,6 +235,292 @@
         "plt.figure(figsize=(14,14))\n",
         "plt.imshow(sharpened_image)\n",
         "plt.title('Sharpened image')\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M7VRdM_Qk7j3"
+      },
+      "source": [
+        "# Edge Detection Filters\n",
+        "\n",
+        "One important feature in images are their borders. To extract borders, we look for regions in which the *directional derivatives* are high.\n",
+        "\n",
+        "These derivatives can be extracted using filters, like the **Sobel filters**.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ju1NtgZ7Ayap"
+      },
+      "source": [
+        "#Sobel kernel for edge detection\n",
+        "filter_kernel = np.array([[-1,-2,-1],\n",
+        "\t\t\t\t[0,0,0],\n",
+        "\t\t\t\t[1,2,1]])\n",
+        "\n",
+        "print(filter_kernel)\n",
+        "\n",
+        "#Apply filter over the blue channel. -1 indicates that the pixel type in the output is the same\n",
+        "#as the input (in this case, uint8)\n",
+        "h_edges = cv2.filter2D(im[:,:,0],-1,filter_kernel)\n",
+        "\n",
+        "#Type of pixels\n",
+        "print(h_edges.dtype)\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(h_edges,cmap=plt.cm.gray)\n",
+        "plt.title('Filtered')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f1VIGhj7A1qN"
+      },
+      "source": [
+        "Now we have to be careful with the types of the images. Filtering operations will lead to outputs that typically are real numbers, while the pixels in the original image in this case are coded as `uint8`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kWbdY8rDlL_g"
+      },
+      "source": [
+        "#The problem with the former case is that, as the output is uint8, negative numbers\n",
+        "#are truncated to 0. That is edges from bright to dark do not appear\n",
+        "#Alternatively, we can store the output as floats\t\n",
+        "h_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,filter_kernel)\n",
+        "\n",
+        "#Type of pixels\n",
+        "print(h_edges_2.dtype)\n",
+        "\n",
+        "#Get now the absolute value\n",
+        "abs_h_edges64f = np.absolute(h_edges_2)\n",
+        "\n",
+        "#Check the difference\n",
+        "plt.figure()  \n",
+        "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
+        "plt.title('Filtered')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9W3Y0pGFl5u9"
+      },
+      "source": [
+        "The kernels are also `numpy` arrays. By **transposing** the former kernel, we obtain a filter that \"responds\" vertical edges:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iXIVQebalxJ0"
+      },
+      "source": [
+        "#Same as above\n",
+        "v_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,np.transpose(filter_kernel))\n",
+        "abs_v_edges64f = np.absolute(v_edges_2)\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(abs_v_edges64f,cmap=plt.cm.gray)\n",
+        "plt.title('Vertical edges kernel')\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fzXEQzw2uKLJ"
+      },
+      "source": [
+        "## Homework #1\n",
+        "\n",
+        "Play with the thresholds and add binary operations to obtain a clean binary edge image"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2_JEA1tLme1r"
+      },
+      "source": [
+        "#We can add the outputs to obtain an image\n",
+        "#with the response of both filters (in this case, the absolute value)\n",
+        "abs_edges_64f = abs_v_edges64f + abs_h_edges64f\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(abs_edges_64f,cmap=plt.cm.gray)\n",
+        "plt.title('Edge response')\n",
+        "\n",
+        "#Check the values of abs_edges_f64. They not need to be between 0 and 255\n",
+        "print('Maximum', np.max(abs_edges_64f))\n",
+        "print('Minimum', np.min(abs_edges_64f))\n",
+        "\n",
+        "\n",
+        "#We can apply the threshold operation to extract the stongest responses\n",
+        "ret,binary_edges = cv2.threshold(abs_edges_64f,100,255,cv2.THRESH_BINARY)\n",
+        "\n",
+        "#kernel = np.ones((3,3))\n",
+        "#binary_edges = cv2.erode(binary_edges,kernel)\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(binary_edges,cmap=plt.cm.gray)\n",
+        "plt.title('Binarized edges ')\n",
+        "\n",
+        "print(binary_edges.dtype)\n",
+        "print('Maximum', np.max(binary_edges))\n",
+        "print('Minimum', np.min(binary_edges))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3L26bUxs4hze"
+      },
+      "source": [
+        "# Contours\n",
+        "\n",
+        "We can then use the edges to extract contours, using the OpenCV function `findContours`\n",
+        "\n",
+        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html\n",
+        "\n",
+        "The function returns a list with the countours (the pixel coordinates of the points in those contours). The function offers multiple options for dealing with contours. There are two important parameters:\n",
+        "\n",
+        "* Mode: how the contours are organized. For instance:\n",
+        " * `CV_RETR_EXTERNAL` retrieves only the extreme outer contours. \n",
+        " * `CV_RETR_LIST`: retrieves all of the contours without establishing any hierarchical relationships\n",
+        "* Method: how the contour is extracted. For instance:\n",
+        " * `CV_CHAIN_APPROX_NONE` stores absolutely all the contour points. \n",
+        " * `CV_CHAIN_APPROX_SIMPLE` compresses horizontal, vertical, and diagonal segments and leaves only their end points.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cOIu6d-puyGs"
+      },
+      "source": [
+        "squares = []\n",
+        "\n",
+        "#findContours require unit8 binary images\n",
+        "edges = np.uint8(binary_edges)\n",
+        "\n",
+        "#Check the parameters of findContours\n",
+        "contours, _hierarchy = cv2.findContours(edges, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "\n",
+        "print(len(contours))\n",
+        "\n",
+        "#Make a copy of the original image to draw over it\n",
+        "#This is important. Assignments (A = B) in numpy arrays does not create \n",
+        "#a new array, but a new reference to the same allocated data\n",
+        "im_draw = im.copy()\n",
+        "\n",
+        "#We can draw the contours over the image\n",
+        "cv2.drawContours(im_draw, contours, -1, (255, 0, 0), 2 )\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(im_draw)\n",
+        "plt.title('Extracted contours ')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K6bGSz8X8nmA"
+      },
+      "source": [
+        "With the contours, then we can do many things. You can compute contour features like length, area, etc:\n",
+        "\n",
+        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_contour_features/py_contour_features.html\n",
+        "\n",
+        "In the following example, we look for rectangles in the image\n",
+        "(adapted from opencv_source/samples/python2/squares.py)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atHLouxK4nPB"
+      },
+      "source": [
+        "#Function that computes the (absolute value of the) cosine of the angle formed \n",
+        "#by 3 consecutive vertices\n",
+        "def angle_cos(p0, p1, p2):\n",
+        "    d1, d2 = (p0-p1).astype('float'), (p2-p1).astype('float')\n",
+        "    return abs( np.dot(d1, d2) / np.sqrt( np.dot(d1, d1)*np.dot(d2, d2) ) )\n",
+        "\n",
+        "#contours is a Python list for all contours. Each contour is a\n",
+        "#numpy array of points\n",
+        "for cnt in contours:\n",
+        "  #Compute lenght\n",
+        "  cnt_len = cv2.arcLength(cnt, True)\n",
+        "\n",
+        "  #Approximate the contour by a polygon, allowing as error a 2% of the length\n",
+        "  cnt = cv2.approxPolyDP(cnt, 0.02*cnt_len, True)\n",
+        "\n",
+        "  #If the resultant polygon has 4 vertices and is convex it may be a rectangle\n",
+        "  #We also set a threshold for the area of the square (to avoid too small ones)\n",
+        "  if len(cnt) == 4 and cv2.contourArea(cnt) > 1000 and cv2.isContourConvex(cnt):\n",
+        "    #Reshape the array for convenience\n",
+        "    #print(cnt.shape)\n",
+        "    cnt = cnt.reshape(-1, 2)\n",
+        "    #print(cnt.shape)\n",
+        "\n",
+        "    #Check if the angles of the polygong are close to 90º (cos(90) = 0)\n",
+        "    max_cos = np.max([angle_cos( cnt[i], cnt[(i+1) % 4], cnt[(i+2) % 4] ) for i in range(4)])\n",
+        "    if max_cos < 0.1:\n",
+        "      squares.append(cnt)\n",
+        "\n",
+        "#Draw resultant contours\n",
+        "cv2.drawContours(im_draw, squares, -1, (0, 255, 0), 3 )\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(im_draw)\n",
+        "plt.title('Extracted squares ')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IYN4Aw0TInuk"
+      },
+      "source": [
+        "## Homework #2\n",
+        "\n",
+        "Using the given image, extract the pixel coordinates of the corners of the black square encompasing the AruCO marker, as well as the area of the white rectangles inside the black square."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CqSQyKhGHJcr"
+      },
+      "source": [
+        "#Target image\n",
+        "hm2 = io.imread('https://robotics.upo.es/~lmercab/rva/aruco.jpg')\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(hm2)"
       ],
       "execution_count": null,
       "outputs": []
