Added final homework

--- a/imageprocessingbasics/filtering.ipynb
+++ b/imageprocessingbasics/filtering.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNwhWqw5x7i09BJmwh3J/y6",
+      "authorship_tag": "ABX9TyODiJUc3o+90AGS6l6+Nvc4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,6 +518,32 @@
       "source": [
         "#Target image\n",
         "hm2 = io.imread('https://robotics.upo.es/~lmercab/rva/aruco.jpg')\n",
+        "\n",
+        "plt.figure()  \n",
+        "plt.imshow(hm2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OE3FLjCo-QR6"
+      },
+      "source": [
+        "## Homework 3\n",
+        "\n",
+        "Detect and provide the center pixel coordinates of all yield signs in the image"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LWMcUXM_-ZU3"
+      },
+      "source": [
+        "#Target image\n",
+        "hm2 = io.imread('https://robotics.upo.es/~lmercab/rva/doble-ceda.jpg')\n",
         "\n",
         "plt.figure()  \n",
         "plt.imshow(hm2)"
