Updated text explanations

--- a/imageprocessingbasics/IntroOpenCV.ipynb
+++ b/imageprocessingbasics/IntroOpenCV.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRbb5SE14pcHFuPWKy8X4W",
+      "authorship_tag": "ABX9TyPRN0t4eVokHzxEja2bJ5SW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
       "source": [
         "Remember that the basic data type that we will use from OpenCV are **numpy** arrays, which represents a multi-dimensional matrix.\n",
         "\n",
-        "https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_core/py_basic_ops/py_basic_ops.html#basic-ops \n"
+        "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_core/py_basic_ops/py_basic_ops.html#basic-ops \n"
       ]
     },
     {
@@ -126,7 +126,7 @@
         "print(\"Pixel type: \", im.dtype)\n",
         "\n",
         "#Accesing individual pixels (not efficient):\n",
-        "print(\"Color of pixel at row 200, col 100: \", im[200,100])\n",
+        "print(\"RGB Color of pixel at row 200, col 100: \", im[200,100])\n",
         "print(\"Blue field for that pixel: \", im[200,100,2])\n"
       ],
       "execution_count": null,
@@ -139,37 +139,10 @@
       },
       "source": [
         "# Basic color operations\n",
-        "The color images are represented by matrixes with 3 dimensions, in which the third dimension stores the color channel\n",
-        "\n",
-        "We can use different color spaces. The most typical is Red-Green-Blue. But we can also consider other color spaces, as explained in theory\n",
-        "\n",
-        "Also, we will work sometimes with greyscale images and with binary images.\n",
-        "\n",
-        "*   Changing colour spaces in OpenCV:\n",
-        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_colorspaces/py_colorspaces.html\n",
+        "The color images are represented by matrixes with 3 dimensions, in which the third dimension stores the color channel. \n",
         "\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vnIdPLhjYEgi"
-      },
-      "source": [
-        "#Convert to Grayscale image \n",
-        "im_gray = cv2.cvtColor(im, cv2.COLOR_RGB2GRAY)\n",
-        "plt.imshow(im_gray,cmap=plt.cm.gray)\n",
-        "\n",
-        "#Dimensions of image\n",
-        "print(im_gray.shape)\n",
-        "\n",
-        "#Type of pixels\n",
-        "print(im_gray.dtype)\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -200,6 +173,42 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9MHDNwZozXkO"
+      },
+      "source": [
+        "We can use different **color spaces**. The most typical is Red-Green-Blue (RGB). But we can also consider other color spaces (like HSV), as explained in theory.\n",
+        "\n",
+        "Also, we will work sometimes with greyscale images and with binary images.\n",
+        "\n",
+        "*   Changing colour spaces in OpenCV:\n",
+        "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_colorspaces/py_colorspaces.html\n",
+        "* HSV color space:\n",
+        "  * https://en.wikipedia.org/wiki/HSL_and_HSV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vnIdPLhjYEgi"
+      },
+      "source": [
+        "#Convert to Grayscale image \n",
+        "im_gray = cv2.cvtColor(im, cv2.COLOR_RGB2GRAY)\n",
+        "plt.imshow(im_gray,cmap=plt.cm.gray)\n",
+        "\n",
+        "#Dimensions of image\n",
+        "print(\"Image dimensions: \", im_gray.shape)\n",
+        "\n",
+        "#Type of pixels\n",
+        "print(\"Image type: \", im_gray.dtype)\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0ffqZQGpiL8B"
@@ -208,8 +217,9 @@
         "#Alternative color spaces\n",
         "#Conversion to HSV\n",
         "im_hsv = cv2.cvtColor(im, cv2.COLOR_RGB2HSV)\n",
+        "\n",
         "#Dimensions of image\n",
-        "print(im_hsv.shape)\n",
+        "print(\"Image dimensions: \",im_hsv.shape)\n",
         "\n",
         "h=im_hsv[:,:,0]\n",
         "s=im_hsv[:,:,1]\n",
@@ -256,7 +266,9 @@
       "source": [
         "#Basic Operations: Thresholding\n",
         "ret,thresh1 = cv2.threshold(g,150,255,cv2.THRESH_BINARY)\n",
-        "print(\"Pixel \", thresh1[200,100])\n",
+        "\n",
+        "\n",
+        "print(\"Pixel value:\", thresh1[200,100])\n",
         "\t\n",
         "plt.figure()  \n",
         "plt.imshow(thresh1,plt.cm.gray)\n",
@@ -290,11 +302,13 @@
         "id": "ecCmsjn8d-8I"
       },
       "source": [
-        "It is possible to operate with pairs of images pixel by pixel, usign arithmentic and binary operators\n",
+        "It is possible to operate with pairs of images pixel by pixel, usign arithmetic (*add*, *substract*) and binary operators (*and*, *or*, *not*):\n",
         "\n",
         "\n",
         "*   Arithmetic and bit-wise operations\n",
         "    *   https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_core/py_image_arithmetics/py_image_arithmetics.html\n",
+        "\n",
+        "Furthermore, many operations in OpenCV can be **masked**. This is, a binary image is used as a mask, and the operation is only carried out in those pixels that are white in the mask.\n",
         "\n",
         "\n"
       ]
@@ -325,7 +339,7 @@
         "id": "0qSgT-PeoQ3Y"
       },
       "source": [
-        "We can use the former operations to mixed two images using a chroma key"
+        "We can use the former operations to mix two images using a chroma key:"
       ]
     },
     {
@@ -358,12 +372,12 @@
         "\n",
         "In region-based operations, the value of the output pixel depends on the values of the pixels on a region surrounding the input pixel of interest.\n",
         "\n",
-        "For binary images, two common operations are erosion and dilation. See the material in the slides for more information:\n",
+        "For binary images, two common operations are **erosion** and **dilation**. See the material in the slides for more information:\n",
         "\n",
         "* Erosion and dilation:\n",
         "  * https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html#morphological-ops\n",
         "\n",
-        "**TODO**: Play with the kernel size and the iterations in the operations"
+        "**TODO**: Play with the **kernel size** and the **iterations** in the operations"
       ]
     },
     {
@@ -403,7 +417,7 @@
         "id": "5NgrIxw0LCV6"
       },
       "source": [
-        "# A First Program using OpenCV\n",
+        "# Homework #1: A First Program using OpenCV\n",
         "The objective of the first program is to implement a simple **CHROMA KEY** application. \n",
         "\n",
         "The main idea of a CHROMA is to eliminate a given colour from the image and substitute it by a different background (see Figure). Typically the green colour is used for the chroma, but other options exist.\n",
