Updated text explanations

--- a/imageprocessingbasics/filtering.ipynb
+++ b/imageprocessingbasics/filtering.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODiJUc3o+90AGS6l6+Nvc4",
+      "authorship_tag": "ABX9TyN+/tTCdv4JA8aRyFPFBxdH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "\n",
         "We will use the 3.x version of OpenCV’s API. We will intensively refer to the documentation (https://opencv-python-tutroals.readthedocs.io/en/latest/index.html)\n",
         "\n",
-        "We analyze the linear filtering operations in OpenCV and use them to extract features of interest like borders and points\n",
+        "We analyze the **linear filtering** operations in OpenCV and use them to extract features of interest like borders.\n",
         "\n"
       ]
     },
@@ -65,6 +65,7 @@
         "#We can use OpenCV in Colab, but not its functions for creating plots\n",
         "#We use matplotlib for generating plots\n",
         "from matplotlib import pyplot as plt\n",
+        "from matplotlib import cm\n",
         "\n",
         "#We use the library scikit to read images from url \n",
         "#In OpenCV, the function to read from file is cv2.imread\n",
@@ -112,11 +113,13 @@
       "source": [
         "# Smoothing filters\n",
         "\n",
-        "One filter that is used typically to remove noise is an smoothing filter.\n",
+        "One filter that is used typically to remove noise is an **smoothing filter**. A smoothing filter averages the region surrounding the pixel of interest.\n",
         "\n",
-        "An smoothing filter averages the region surrounding the pixel of interest.\n",
+        "If we want to give more importance to zones closer to a given pixel, typically a Gaussian kernel is used (the Gaussian kernel has many nice properties as well, but we will not see them now).\n",
         "\n",
-        "If we want to give more importance to zones closer to the pixel, typicall a Gaussian kernel is used (the Gaussian kernel has many nice properties as well, but we will not see them now)"
+        "The (isotropic) Gaussian function in 2D (centered in the point $(k/2,k/2$)) is given by:\n",
+        "\n",
+        "$g(i,j)=\\frac{1}{2 \\pi \\sigma^2}e^{-\\frac{(i-k/2)^2+(j-k/2)^2}{2\\sigma^2}}$\n"
       ]
     },
     {
@@ -127,25 +130,43 @@
       "source": [
         "#Create a Gaussian kernel\n",
         "#Size\n",
-        "k=10\n",
+        "k=11\n",
         "#Sigma\n",
-        "sigma=5\n",
+        "sigma=1.5\n",
         "\n",
         "gaussKernel=np.zeros(shape=(k,k))\n",
         "\n",
-        "#Apply the Gaussian 'bell' equation\n",
+        "#Apply the Gaussian 'bell' equation (see above) to determine the value of element\n",
+        "#of the kernel. \n",
         "for i in range(k):\n",
         "  for j in range(k):\n",
-        "    gaussKernel[i,j] = np.exp(-((i-(k-1)/2)**2+(j-(k-1)/2)**2)/sigma**2)\n",
+        "    gaussKernel[i,j] = np.exp(-((i-(k-1)/2)**2+(j-(k-1)/2)**2)/(2*(sigma**2)))\n",
         "\n",
         "#Normalize the kernel (so all element sum 1.0)\n",
         "gaussKernel /= np.sum(gaussKernel)\n",
         "\n",
+        "#Show the kernel values\n",
         "print(gaussKernel)\n",
         "\n",
-        "plt.figure()  \n",
+        "#Plot the kernel as a image\n",
+        "plt.figure()\n",
         "plt.imshow(gaussKernel,cmap=plt.cm.gray)\n",
-        "plt.title('Gaussian Kernel')"
+        "plt.title('Gaussian Kernel')\n",
+        "\n",
+        "#Plot the kernel in 3D\n",
+        "u = np.arange(0, k, 1)\n",
+        "v = np.arange(0, k, 1)\n",
+        "U, V = np.meshgrid(u, v)\n",
+        "\n",
+        "fig = plt.figure()\n",
+        "ax = plt.axes(projection='3d')\n",
+        "# Plot the surface.\n",
+        "surf = ax.plot_surface(U, V, gaussKernel,\n",
+        "                       linewidth=0, antialiased=False, cmap=cm.coolwarm)\n",
+        "ax.set_title('Gaussian Kernel (3D view)')\n",
+        "# Add a color bar which maps values to colors.\n",
+        "fig.colorbar(surf, shrink=0.5, aspect=5)\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -191,11 +212,9 @@
       "source": [
         "# Shaperning Filters\n",
         "\n",
-        "The convolution operation is a linear operation. \n",
+        "The convolution operation is a linear operation. This means that the sum of several filtered images is the same as the image convolved with the sum of the kernels. This can be used to combine several kernels to obtain the desired effect.\n",
         "\n",
-        "Several kernels can be combined to obtain the desired effect.\n",
-        "\n",
-        "For instance, a sharpening effect can be obtained by combining a delta kernel (that leaves the image intact) and an average kernel:"
+        "For instance, a sharpening effect can be obtained by substracting a delta kernel (that leaves the image intact) and an averaging kernel:"
       ]
     },
     {
@@ -209,7 +228,7 @@
         "#Average filter: returns the average on a 3x3 neighbourhood\n",
         "average_kernel = np.ones((3,3),np.float32)/9.0\n",
         "\n",
-        "#Delta kernel: returns (twice) the value of the pixel\n",
+        "#Delta kernel: returns the value of the pixel\n",
         "delta_kernel = np.array([[0,0,0],\n",
         "\t\t\t\t[0,1,0],\n",
         "\t\t\t\t[0,0,0]],np.float32)\n",
@@ -219,7 +238,7 @@
         "print(delta_kernel)\n",
         "\n",
         "#The sharpening kernel is a combination of the other two\n",
-        "#We suubtract the average to twice the value at a pixel\n",
+        "#We subtract the average to twice the value at a pixel\n",
         "sharpening_kernel = 2*delta_kernel - average_kernel\n",
         "\n",
         "print(sharpening_kernel)\n",
@@ -285,7 +304,10 @@
         "id": "f1VIGhj7A1qN"
       },
       "source": [
-        "Now we have to be careful with the types of the images. Filtering operations will lead to outputs that typically are real numbers, while the pixels in the original image in this case are coded as `uint8`"
+        "Two points the we need to take into account:\n",
+        "\n",
+        "First, now we have to be careful with the types of the images. Filtering operations will lead to outputs that typically are **real numbers**, while the pixels in the original image in this case are coded as `uint8`. If we maintain the same type, we will be loosing information. By including the parameter `cv2.CV_64F` in the call to `filter2D`, the pixels of the output will be stored as `float`.\n",
+        "\n"
       ]
     },
     {
@@ -308,7 +330,41 @@
         "#Check the difference\n",
         "plt.figure()  \n",
         "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
-        "plt.title('Filtered')"
+        "plt.title('Filtered with Sobel Kernel')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gCOLaekmSFKR"
+      },
+      "source": [
+        "Another **important point**: The Sobel kernel can give high values in noisy regions. Thus, the derivative is typically applied to smoothed images, that eliminate part of the noise, leading to cleaner edge responses. \n",
+        "\n",
+        "**TODO**: Check the difference, and play with the Gaussian kernel above to change different values of $\\sigma$. We will relate this to the concept of *scale* in future lessons.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u1xjk3_ISaBy"
+      },
+      "source": [
+        "h_edges_blurred = cv2.filter2D(blurred_image[:,:,0],cv2.CV_64F,filter_kernel)\n",
+        "\n",
+        "#Get now the absolute value\n",
+        "abs_h_edges64f_blurred = np.absolute(h_edges_blurred)\n",
+        "\n",
+        "#Check the difference\n",
+        "plt.figure(figsize=(14,14)) \n",
+        "plt.subplot(1,2,1) \n",
+        "plt.imshow(abs_h_edges64f,cmap=plt.cm.gray)\n",
+        "plt.title('Filtered with Sobel Kernel')\n",
+        "plt.subplot(1,2,2) \n",
+        "plt.imshow(abs_h_edges64f_blurred,cmap=plt.cm.gray)\n",
+        "plt.title('Filtered with Gaussian and then Sobel Kernel')"
       ],
       "execution_count": null,
       "outputs": []
@@ -319,7 +375,7 @@
         "id": "9W3Y0pGFl5u9"
       },
       "source": [
-        "The kernels are also `numpy` arrays. By **transposing** the former kernel, we obtain a filter that \"responds\" vertical edges:"
+        "The kernels are also `numpy` arrays. By **transposing** the former kernel, we obtain a filter that \"responds\" to vertical edges:"
       ]
     },
     {
@@ -328,12 +384,12 @@
         "id": "iXIVQebalxJ0"
       },
       "source": [
-        "#Same as above\n",
-        "v_edges_2 = cv2.filter2D(im[:,:,0],cv2.CV_64F,np.transpose(filter_kernel))\n",
-        "abs_v_edges64f = np.absolute(v_edges_2)\n",
+        "#Same as above, but filter with the transpose of the kernel\n",
+        "v_edges_2_blurred = cv2.filter2D(blurred_image[:,:,0],cv2.CV_64F,np.transpose(filter_kernel))\n",
+        "abs_v_edges64f_blurred = np.absolute(v_edges_2_blurred)\n",
         "\n",
         "plt.figure()  \n",
-        "plt.imshow(abs_v_edges64f,cmap=plt.cm.gray)\n",
+        "plt.imshow(abs_v_edges64f_blurred,cmap=plt.cm.gray)\n",
         "plt.title('Vertical edges kernel')\n"
       ],
       "execution_count": null,
@@ -358,7 +414,7 @@
       "source": [
         "#We can add the outputs to obtain an image\n",
         "#with the response of both filters (in this case, the absolute value)\n",
-        "abs_edges_64f = abs_v_edges64f + abs_h_edges64f\n",
+        "abs_edges_64f = abs_v_edges64f_blurred + abs_h_edges64f_blurred\n",
         "\n",
         "plt.figure()  \n",
         "plt.imshow(abs_edges_64f,cmap=plt.cm.gray)\n",
@@ -394,16 +450,16 @@
       "source": [
         "# Contours\n",
         "\n",
-        "We can then use the edges to extract contours, using the OpenCV function `findContours`\n",
+        "Given a binary image with objects of interest, we can extract their contours using the OpenCV function `findContours`\n",
         "\n",
         "* https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html\n",
         "\n",
-        "The function returns a list with the countours (the pixel coordinates of the points in those contours). The function offers multiple options for dealing with contours. There are two important parameters:\n",
+        "The function returns a Python list with the countours of all elements in the binary image. Each contour is an array with the pixel coordinates of the points in the contour. The function offers multiple options for dealing with contours. There are **two important parameters**:\n",
         "\n",
-        "* Mode: how the contours are organized. For instance:\n",
+        "* **Mode**: how the contours are organized. For instance:\n",
         " * `CV_RETR_EXTERNAL` retrieves only the extreme outer contours. \n",
         " * `CV_RETR_LIST`: retrieves all of the contours without establishing any hierarchical relationships\n",
-        "* Method: how the contour is extracted. For instance:\n",
+        "* **Method**: how the contour is extracted. For instance:\n",
         " * `CV_CHAIN_APPROX_NONE` stores absolutely all the contour points. \n",
         " * `CV_CHAIN_APPROX_SIMPLE` compresses horizontal, vertical, and diagonal segments and leaves only their end points.\n",
         "\n",
@@ -531,9 +587,9 @@
         "id": "OE3FLjCo-QR6"
       },
       "source": [
-        "## Homework 3\n",
+        "## Homework #3\n",
         "\n",
-        "Detect and provide the center pixel coordinates of all yield signs in the image"
+        "Detect and provide the center pixel coordinates of all **yield signs** in the image."
       ]
     },
     {
